# consulo

./: .gitignore  .travis.yml  CLAUDE.md  CONTRIBUTING.md  COROUTINES.md  FUNCTIONALITY.md  ISSUE_TEMPLATE.md  MODULE_AWARE_INDEX.md  NOTICE.txt  README.md  build-boot-libs.xml  build-help-libs.xml  build-platform-libs.xml  build-plugins.xml  build.txt  build.xml  idea.properties  pom.xml  verbaria-lock.json  verbaria.json
.claude/: settings.json
.consulo/: .name  codeStyleSettings.xml  compiler.xml  datasource.xml  encodings.xml  misc.xml  modules.xml  uiDesigner.xml  vcs.xml
.consulo/artifacts/: clientjs.xml  coreLibs.xml  crossPlatformLibraries.xml  dirForRuntime.xml  dist.xml  distForRuntime.xml  distMain.xml  distMain_web.xml  updater_jar.xml  webMain.xml
.consulo/copyright/: apache_2_license.xml  apache_2_productiveme.xml
.consulo/dictionaries/: VISTALL.xml
.consulo/inspectionProfiles/: Project_Default.xml  profiles_settings.xml
.consulo/libraries/: CGLIB.xml  EasyMock.xml  Eclipse.xml  Guava.xml  JDOM.xml  JMock1.xml  JUnit3.xml  JUnit4.xml  JavaHelp.xml  Log4J.xml  Lombok.xml  Mac.xml  Mocks.xml  NanoXML.xml  Netty.xml  OroMatcher.xml  Sanselan.xml  Snappy_Java.xml  Trove4j.xml  Velocity.xml  XStream.xml  XmlRPC.xml  apache_httpclient.xml  args4j.xml  asm.xml  asm4.xml  automaton.xml  cli_parser.xml  commons_codec.xml  commons_compress.xml  commons_net.xml  forms_rt.xml  gson.xml  http_client.xml  http_client_3_1.xml  httpmime.xml  httpmime_4_3_6.xml  imgscalr.xml  javasysmon.xml  jayatana.xml  (+15 more)
.consulo/runConfigurations/: Consulo.xml  Consulo_java_9.xml  consulo_sandbox.xml  consulo_sandbox_desktop.xml  consulo_sandbox_web.xml  consulo_web_boot__jetty_run_.xml  consulo_web_boot__jetty_run__no_platform_build.xml  consulo_web_ui_impl_client__gwt_codeserver_.xml  consulo_web_ui_impl_client__vaadin_run_codeserver_.xml  sandbox_desktop.xml  sandbox_desktop__11_.xml  sandbox_desktop__11___MODULES_.xml  sandbox_desktop__17___MODULES_.xml  sandbox_desktop__8_.xml  sandbox_desktop__MODULES_.xml  sandbox_desktop__sub_write_thread_.xml  sandbox_desktop_awt__11_.xml  sandbox_desktop_awt__11___MODULES_.xml  sandbox_desktop_awt__16___MODULES_.xml  sandbox_desktop_awt__17___MODULES_.xml  sandbox_desktop_awt__21___MODULES_.xml  sandbox_desktop_awt__25___MODULES_.xml  sandbox_desktop_no_platform_build.xml  sandbox_desktop_swt__11___MODULES_.xml  sandbox_desktop_swt__17___MODULES_.xml  sandbox_desktop_swt__21___MODULES_.xml  sandbox_desktop_swt__25___MODULES_.xml  sandbox_web__11_.xml  sandbox_web__17_.xml  sandbox_web__21_.xml  sandbox_web__25_.xml
.github/: FUNDING.yml
.github/workflows/: LinuxNatives.yaml  Loader.yaml  MacNatives.yaml  WindowsNatives.yaml  claude-pr-review.yml  claude-review.yml  claude.yml  maven11.yaml  maven14.yaml  maven15.yaml  maven16.yaml  maven17.yaml  maven18.yaml  maven19.yaml  maven20.yaml  maven21.yaml  maven22.yaml  maven23.yaml  maven24.yaml  maven25.yaml  maven26.yaml  maven8.yml  source-sync.yml
arch/bind/: DEPRECATED.txt  pom.xml
arch/bind-java/: pom.xml
arch/global/: pom.xml
arch/ide/: NOTE.txt  pom.xml
arch/ide-api-provided/: DEPRECATED.txt  pom.xml
arch/ide-java/: pom.xml
arch/ide-provided/: pom.xml
arch/managment/: checkstyle.xml  pom.xml
arch/managment-low-java/: pom.xml
arch/managment-nullaway-java/: pom.xml
distribution/: pom.xml
distribution-runtime/: pom.xml
distribution-sandbox/: pom.xml
distribution/src/: platform.base.xml  platform.base_mac.xml  platform.desktop.awt.xml  platform.desktop.awt_mac.xml  platform.desktop.swt.xml  platform.desktop.xml  platform.desktop_mac.xml  platform.web.xml
jre-stub/: pom.xml
jre9-stub/: pom.xml
lib/libpty/: readme.txt
main/: pom.xml
modules/analysis-api/: pom.xml
modules/analysis-impl/: pom.xml
modules/annotations/: pom.xml
modules/boot/: pom.xml
modules/bootstrap/: pom.xml
modules/buildin-server-impl/: pm.xml  pom.xml
modules/compiler-api/: pom.xml
modules/compiler-bridge-impl/: pom.xml
modules/compiler-impl/: pom.xml
modules/compiler-server-impl/: pom.xml
modules/core-api/: pom.xml
modules/core-impl/: pom.xml
modules/desktop-ui-impl/: pom.xml
modules/diff-api/: pom.xml
modules/diff-impl/: pom.xml
modules/dvcs-api/: pom.xml
modules/dvcs-impl/: pom.xml
modules/dvcs-impl-testing/: pom.xml
modules/editor-ui-api/: pom.xml
modules/editor-ui-ex/: pom.xml
modules/extensions/: pom.xml
modules/external-storage-impl/: pom.xml
modules/external-system-api/: pom.xml
modules/external-system-impl/: pom.xml
modules/forms_rt/: pom.xml
native/: .gitignore
native/LinuxFileSystemNotifier/: CMakeLists.txt
native/Loader/: Cargo.toml  README.md  abi-surface.expected.txt
native/Loader/.cargo/: config.toml
native/Loader/core/: Cargo.toml
native/Loader/core/src/: args.rs  args_windows.rs  build_discovery.rs  jvm.rs  jvm_hooks.rs  lib.rs  logging.rs  path_ext.rs  paths.rs  single_instance.rs  ui.rs  variant.rs  vmoptions.rs
native/Loader/core/src/jre/: linux.rs  macos.rs  mod.rs  windows.rs
native/Loader/loader/: Cargo.toml  build.rs
native/Loader/loader/src/: main.rs
native/MacEnvReader/: CMakeLists.txt
native/MacScreenMenu/: CMakeLists.txt  CustomMenuItemView.m  Menu.m  MenuItem.m
native/WinFileSystemHelper/: CMakeLists.txt  IdeaWin32.c  IdeaWin32.rc  consulo_virtualFileSystem_impl_internal_windows_WindowsFileSystemHelper.h
native/WinJumpListBridge/: CMakeLists.txt  jumplistbridge.cpp
native/WinLoader/: .gitignore  CMakeLists.txt  DpiManifest.xml  WinLauncher.cpp  WinLauncher.rc  stdafx.h
native/WinLoaderLibrary/: CMakeLists.txt  WinLauncher.cpp  WinLauncher.rc  resource.h
native/WinRunner/: CMakeLists.txt  runnerw.rc
native/dylibConsulo/: CMakeLists.txt  Launcher.h  Launcher.m  main.m
native/dylibConsulo/JavaVM/: classfile_constants.h
native/dylibConsulo/MacLauncher.xcodeproj/: project.pbxproj
native/dylibConsulo/consulo/: consulo.h
native/dylibConsulo/dylibConsulo.xcodeproj/: project.pbxproj
native/fsNotifier/linux/: CMakeLists.txt
native/fsNotifier/mac/: CMakeLists.txt
(+69500 files in other folders)
