[package]
name = "consulo-loader-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["awt"]
awt = []
swt = []

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
libloading = { workspace = true }
jni = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
winreg = { workspace = true }
va_list = { workspace = true }

[target.'cfg(target_family = "unix")'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { workspace = true }

[dev-dependencies]
tempfile = "3"
