[package]
name = "consulo-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[[bin]]
name = "consulo"
path = "src/main.rs"

[features]
default = ["awt"]
awt = ["consulo-loader-core/awt"]
swt = ["consulo-loader-core/swt"]
# Skip resource embedding for faster dev-build links.
dev-fast = []

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
libloading = { workspace = true }
consulo-loader-core = { path = "../core", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }

[target.'cfg(target_family = "unix")'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { workspace = true }

[build-dependencies]
winresource = { workspace = true }
